# ibt-cognitive-decision-layer

./: .env  .env.example  .gitignore  MANIFEST.in  README.md  api.py  main.py  phase1_universal_symbolic_language.py  phase2_deep_reasoning_engine.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
decision_layer/: Dockerfile.backend  README.md  docker-compose.yml
decision_layer/backend/app/: __init__.py  main.py  reasoning_engine.py  symbolic_parser.py
decision_layer/frontend/: index.html  package.json
decision_layer/frontend/src/: App.jsx
ibtcode/: __init__.py  config.py  decision.py  encoder.py  logger.py  memory.py  models.py  reasoning.py  response.py  state_engine.py  system.py
test-install/: test_fixed.py
test-install/fresh-test/: pyvenv.cfg
test-install/fresh-test/Scripts/: activate  activate.bat
tests/: test_encoder.py  test_system.py
