[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.37.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "ibt-cognitive-decision-layer"
dynamic = ["version"]
description = "Production-grade cognitive decision engine with emotion awareness and reasoning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*", "venv*", "logs*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100