[metadata]
license_file = LICENSE
description_file = README.md

[options]
include_package_data = True
packages = find:

[options.packages.find]
exclude = 
    tests
    tests.*
    venv
    venv.*
    logs
    __pycache__
    *.pyc

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude = venv, tests, __pycache__

[isort]
profile = black
line_length = 100